tests/snapshots/snapshot_tests__array_two_counters_add.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_two_counters_add.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 Z (- 11332)) Z) (- 11332))",
        "(= (Read_Int_Int (Write_Int_Int a+0 Z (- 24848)) Z) (- 24848))",
        "(= (Read_Int_Int (Write_Int_Int a+0 Z 19450) Z) 19450)",
        "(= (Read_Int_Int (Write_Int_Int a+0 Z 55280) Z) 55280)",
        "(= (Read_Int_Int (Write_Int_Int a+0 Z Z) Z) Z)",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+0) i+0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 j+0 (+ (Read_Int_Int a+0 j+0) (Read_Int_Int a+0 i+0))) j+0) (+ (Read_Int_Int a+0 j+0) (Read_Int_Int a+0 i+0)))",
        "(=> (not (= 0 Z)) (= (Read_Int_Int (Write_Int_Int a+0 Z 55280) 0) (Read_Int_Int a+0 0)))",
        "(=> (not (= 0 Z)) (= (Read_Int_Int (Write_Int_Int a+0 Z Z) 0) (Read_Int_Int a+0 0)))",
        "(=> (not (= 1 Z)) (= (Read_Int_Int (Write_Int_Int a+0 Z (- 24848)) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= 1 Z)) (= (Read_Int_Int (Write_Int_Int a+0 Z 55280) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= 1 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= 1 j+0)) (= (Read_Int_Int (Write_Int_Int a+0 j+0 (+ (Read_Int_Int a+0 j+0) (Read_Int_Int a+0 i+0))) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= 2 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) 2) (Read_Int_Int a+0 2)))",
        "(=> (not (= 2 j+0)) (= (Read_Int_Int (Write_Int_Int a+0 j+0 (+ (Read_Int_Int a+0 j+0) (Read_Int_Int a+0 i+0))) 2) (Read_Int_Int a+0 2)))",
        "(=> (not (= N Z)) (= (Read_Int_Int (Write_Int_Int a+0 Z 55280) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= N j+0)) (= (Read_Int_Int (Write_Int_Int a+0 j+0 (+ (Read_Int_Int a+0 j+0) (Read_Int_Int a+0 i+0))) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z j+0)) (= (Read_Int_Int (Write_Int_Int a+0 j+0 (+ (Read_Int_Int a+0 j+0) (Read_Int_Int a+0 i+0))) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= i+0 Z)) (= (Read_Int_Int (Write_Int_Int a+2 Z (- 11332)) i+0) (Read_Int_Int a+2 i+0)))",
        "(=> (not (= i+0 Z)) (= (Read_Int_Int (Write_Int_Int a+3 Z (- 11332)) i+0) (Read_Int_Int a+3 i+0)))",
        "(=> (not (= i+0 Z)) (= (Read_Int_Int (Write_Int_Int a+3 Z (- 24848)) i+0) (Read_Int_Int a+3 i+0)))",
        "(=> (not (= i+0 i+1)) (= (Read_Int_Int (Write_Int_Int a+1 i+1 i+1) i+0) (Read_Int_Int a+1 i+0)))",
        "(=> (not (= i+0 j+4)) (= (Read_Int_Int (Write_Int_Int a+4 j+4 (+ (Read_Int_Int a+4 j+4) (Read_Int_Int a+4 i+4))) i+0) (Read_Int_Int a+4 i+0)))",
        "(=> (not (= i+0 j+5)) (= (Read_Int_Int (Write_Int_Int a+5 j+5 (+ (Read_Int_Int a+5 j+5) (Read_Int_Int a+5 i+5))) i+0) (Read_Int_Int a+5 i+0)))",
        "(=> (not (= i+1 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+1) (Read_Int_Int a+0 i+1)))",
        "(=> (not (= i+2 j+0)) (= (Read_Int_Int (Write_Int_Int a+0 j+0 (+ (Read_Int_Int a+0 j+0) (Read_Int_Int a+0 i+0))) i+2) (Read_Int_Int a+0 i+2)))",
        "(=> (not (= i+7 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+7) (Read_Int_Int a+0 i+7)))",
        "(=> (not (= j+0 Z)) (= (Read_Int_Int (Write_Int_Int a+1 Z (- 11332)) j+0) (Read_Int_Int a+1 j+0)))",
        "(=> (not (= j+0 Z)) (= (Read_Int_Int (Write_Int_Int a+1 Z Z) j+0) (Read_Int_Int a+1 j+0)))",
        "(=> (not (= j+0 Z)) (= (Read_Int_Int (Write_Int_Int a+3 Z 55280) j+0) (Read_Int_Int a+3 j+0)))",
        "(=> (not (= j+0 Z)) (= (Read_Int_Int (Write_Int_Int a+7 Z (- 11332)) j+0) (Read_Int_Int a+7 j+0)))",
        "(=> (not (= j+0 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) j+0) (Read_Int_Int a+0 j+0)))",
        "(=> (not (= j+0 j+3)) (= (Read_Int_Int (Write_Int_Int a+3 j+3 (+ (Read_Int_Int a+3 j+3) (Read_Int_Int a+3 i+3))) j+0) (Read_Int_Int a+3 j+0)))",
        "(=> (not (= j+0 j+8)) (= (Read_Int_Int (Write_Int_Int a+8 j+8 (+ (Read_Int_Int a+8 j+8) (Read_Int_Int a+8 i+8))) j+0) (Read_Int_Int a+8 j+0)))",
        "(=> (not (= j+1 j+0)) (= (Read_Int_Int (Write_Int_Int a+0 j+0 (+ (Read_Int_Int a+0 j+0) (Read_Int_Int a+0 i+0))) j+1) (Read_Int_Int a+0 j+1)))",
        "(=> (not (= j+6 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) j+6) (Read_Int_Int a+0 j+6)))",
        "(=> (not (= j+7 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) j+7) (Read_Int_Int a+0 j+7)))",
        "(=> (not (= j+8 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) j+8) (Read_Int_Int a+0 j+8)))",
    ],
}
