tests/snapshots/snapshot_tests__array_two_counters_init_const.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_two_counters_init_const.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 1) i+0) 1)",
        "(= (Read_Int_Int (Write_Int_Int b+0 j+0 1) j+0) 1)",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 1) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z j+0)) (= (Read_Int_Int (Write_Int_Int b+0 j+0 1) Z) (Read_Int_Int b+0 Z)))",
    ],
}
