tests/snapshots/snapshot_tests__distributed_protocol_flash_coherence_depth_2.snap
---
source: tests/snapshot_tests.rs
expression: "run_distributed_protocol_depth_2(\"examples/distributed_protocols/flash-coherence/flash-coherence.vmt\")"
---
CliResult {
    status_code: Some(
        0,
    ),
    stdout: "",
    stderr: "",
}
