tests/snapshots/snapshot_tests__distributed_protocol_german_depth_2.snap
---
source: tests/snapshot_tests.rs
expression: "run_distributed_protocol_depth_2(\"examples/distributed_protocols/german/german.vmt\")"
---
CliResult {
    status_code: Some(
        0,
    ),
    stdout: "",
    stderr: "",
}
