tests/snapshots/snapshot_tests__smt2_array_bitvec_minimal_simple.snap
---
source: tests/snapshot_tests.rs
expression: "run_smt2_simple_benchmark(\"examples/smt2/array_bitvec_minimal.smt2\")"
---
Smt2SimpleResult {
    example_name: "examples/smt2/array_bitvec_minimal.smt2",
    status: Panic,
    outcome: Smt2SimpleOutcome {
        results: [],
    },
}
